--- a/app/src/main/res/layout/customview_common.xml
+++ b/app/src/main/res/layout/customview_common.xml
@@ -21,13 +21,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ProgressBar
-            android:id="@+id/custom_progressbar"
-            android:indeterminateDrawable="@drawable/progressbar_small"
-            android:layout_width="20dp"
-            android:layout_marginTop="0dp"
-            android:visibility="gone"
-            android:layout_height="20dp" />
+        <LinearLayout
+            android:id = "@+id/custom_status_layout"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ProgressBar
+                android:id="@+id/custom_progressbar"
+                android:indeterminateDrawable="@drawable/progressbar_small"
+                android:layout_width="20dp"
+                android:layout_marginTop="0dp"
+                android:visibility="gone"
+                android:layout_height="20dp" />
+
+            <TextView
+                android:id="@+id/custom_txt_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:visibility="gone"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
 
     </LinearLayout>
 
