--- a/app/src/main/res/layout/fragment_plan.xml
+++ b/app/src/main/res/layout/fragment_plan.xml
@@ -42,6 +42,7 @@
     </RelativeLayout>
 
     <ScrollView
+        android:id="@+id/plan_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -50,6 +51,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/plan_textview_error"
+                android:layout_marginTop="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/red"
+                android:text=""
+                android:visibility="gone"
+                app:srcCompat="@mipmap/icon_plan" />
 
             <id.co.myrepublic.salessupport.widget.CustomSpinner
                 android:id="@+id/plan_spinner_ont_package"
